--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                     <span title="Children"><i class="fas fa-chid"></i></span>
                 </div>
             </div>
-            <div><h4 style="text-align: center;">----Imgaes are for Example and Education only----</h4></div>
+            <div>
+                <h4 style="text-align: center;">----project:-08----</h4>
+                <h4 style="text-align: center;">----Made by:-Syed Mohammed Mujahid----</h4>
+                <h4 style="text-align: center;">----Imgaes are for Example and Education only----</h4></div>
             <div id="products">
                 </div>
 
